@@ -33,6 +33,7 @@ Version 1.1.5 to be released
 - Enh #1596: Added 'not' property to CRangeValidator and CRegularExpressionValidator in order to support inversion of the validation logic (Y!!)
 - Enh #1598: Fixed CHttpRequest::getUserAgent() to make sure it works even if HTTP_USER_AGENT is not defined (Qiang)
 - Enh #1607: Added CDbCache::setDbConnection (Qiang)
+- Enh #1611: Added support for using composite keys in CActiveDataProvider (Qiang)
 - Enh #1618: Fixed CHttpRequest::getAcceptTypes() to make sure it works even if HTTP_ACCEPT is not defined (Y!!)
 - Enh #1625: Replaced rand() with mt_rand() for generating random private keys (Qiang)
 - Enh #1627: Added check if FreeType support is installed and enabled in GD (mdomba)
